--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
   <head>
   	<meta charset="utf-8">
   	<link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
   </head>
   <body>	
-    <h1> Welcome to a Flynn Family 2021 summer party! </h1>
+    <main>
+    <h1> You’re invited to a picnic.
+ </h1>
     <div class="writing">
-<p> <br> We are having a party on August 7th at our house at ...address here...
-The party will begin at one, with food at two and festivities throughout.
-</p> <br> 
-<p>We hope you can make it! <br>
-</p> <br>
-<p> We will be grilling hamburgers, and other food is potluck style. Please add the dish you plan to bring to <a href="https://docs.google.com/document/d/1AxOePNI8qGLYrXFO4wAiYH5Vr82XXpIWJLYCpEYz_1s/edit?usp=sharing"> this document </a> so we can all get a sense of what we'll be eating.  <br> <br> </p>
-<p>Here are directions to find the house from______:
-  direcitons directions directions directions directions
+<p> <br> Join us on Saturday, August 7 <br> at 1 pm. Bring your favorite dish and a beverage! Grilled burgers and sausages will be provided.
+<br> - the Flynn Family
+</p> 
+<p>Please let folks know what dish you will be bringing <a href="https://docs.google.com/document/d/1AxOePNI8qGLYrXFO4wAiYH5Vr82XXpIWJLYCpEYz_1s/edit?usp=sharing"> here.</a> <br>
+</p> 
+<p>  Directions:  </p>
+<div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=55%20point%20lane%20kinsale%20va&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies2.org">fmovies .com</a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">google map on web site</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+<p>Email Margaret Flynn (mrf4lkc@gmail.com) with any questions.
 <br>
 <br>
 <br>
@@ -22,5 +27,6 @@ The party will begin at one, with food at two and festivities throughout.
 ----------------------
 </p>
 </div>
+</main>
   </body>
 </html> 
