--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 </p> 
 <p>  Directions:  </p>
 <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=55%20point%20lane%20kinsale%20va&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies2.org">fmovies .com</a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">google map on web site</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
-<p>Email Margaret Flynn (mrf4lkc@gmail.com) with any questions.
+<p> We hope to see you there! <br> </p>
+      <p>Email Margaret Flynn (mrf4lkc@gmail.com) with any questions.
 <br>
 <br>
 <br>
