--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <p> <br> Join us on Saturday, August 7, <br> at 1 pm. Bring your own beverages, lawn chairs and a favorite dish <br> to share! Grilled burgers <br> and sausages will be provided. <br> We'll plan to eat at 2 pm.
 <br> - the Flynn Family
 </p> 
-<p>Please let folks know what dish you will be bringing <a href="https://docs.google.com/document/d/1AxOePNI8qGLYrXFO4wAiYH5Vr82XXpIWJLYCpEYz_1s/edit?usp=sharing"> here.</a> <br>
+<p>Please let folks know what dish you will be bringing <a href="https://docs.google.com/document/d/1AxOePNI8qGLYrXFO4wAiYH5Vr82XXpIWJLYCpEYz_1s/edit?usp=sharing"> here.</a> <br> <br>
   P.S. The pool will be open if you’d like to swim! <br>
 </p> 
 <p>  Directions:  </p>
