--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <main>
     <h1> You’re invited to a picnic.
  </h1>
+      <h2 class="change"> Date and time change due to rain!
+      </h2>
     <div class="writing">
-<p> <br> Join us on Saturday, August 7, <br> at 1 pm. Bring your own beverages, lawn chairs and a favorite dish <br> to share! Grilled burgers <br> and sausages will be provided. <br> We'll plan to eat at 2 pm.
+      <p> <br> Join us on <div class="change">Sunday, August 8, <br> at 12 pm.</div> Bring your own beverages, lawn chairs and a favorite dish <br> to share! Grilled burgers <br> and sausages will be provided. <br> We'll plan to eat at 2 pm.
 <br> - the Flynn Family
 </p> 
 <p>Please let folks know what dish you will be bringing <a href="https://docs.google.com/document/d/1AxOePNI8qGLYrXFO4wAiYH5Vr82XXpIWJLYCpEYz_1s/edit?usp=sharing"> here.</a> <br> <br>
