--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1> You’re invited to a picnic.
  </h1>
     <div class="writing">
-      <p> Date and time have changed due to weather! <br> Join us on <strong>Sunday, August 8, <br> at 12 pm.</strong> Bring your own beverages, lawn chairs and a favorite dish <br> to share! Grilled burgers <br> and sausages will be provided. <br> We'll plan to eat at 2 pm.
+      <p> <strong> Date and time have changed due to weather! </strong> <br> Join us on <strong>Sunday, August 8, <br> at 12 pm.</strong> Bring your own beverages, lawn chairs and a favorite dish <br> to share! Grilled burgers <br> and sausages will be provided. <br> We'll plan to eat at 2 pm.
 <br> - the Flynn Family
 </p> 
 <p>Please let folks know what dish you will be bringing <a href="https://docs.google.com/document/d/1AxOePNI8qGLYrXFO4wAiYH5Vr82XXpIWJLYCpEYz_1s/edit?usp=sharing"> here.</a> <br> <br>
